--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="/bootstrap.css">
     <link rel="stylesheet" href="/application.css">
+    <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono|Source+Sans+Pro" rel="stylesheet">
     <title>Robot World</title>
   </head>
   <body>
